--- a/.github/workflows/new-release.yml
+++ b/.github/workflows/new-release.yml
@@ -26,20 +26,8 @@ jobs:
         with:
           java-version: 8
           distribution: 'zulu'
-      - name: Restore Gradle caches
-        uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 # v4.2.3
-        with:
-          path: ~/.gradle/caches
-          key: ${{ runner.os }}-gradle-cache-${{ hashFiles('**/*.gradle.kts') }}-${{ hashFiles('**/gradle.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-cache-
-      - name: Restore Gradle wrapper
-        uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 # v4.2.3
-        with:
-          path: ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-wrapper-${{ hashFiles('**/gradlew') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-wrapper-
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v4
       - name: Publish plugin
         env:
           GRADLE_PUBLISH_KEY: ${{ secrets.GRADLE_PUBLISH_KEY }}
