--- a/.github/workflows/new-release.yml
+++ b/.github/workflows/new-release.yml
@@ -32,7 +32,7 @@ jobs:
         env:
           GRADLE_PUBLISH_KEY: ${{ secrets.GRADLE_PUBLISH_KEY }}
           GRADLE_PUBLISH_SECRET: ${{ secrets.GRADLE_PUBLISH_SECRET }}
-          GITHUB_KEY: ${{ secrets.GithubKey }}
+          GITHUB_KEY: ${{ secrets.GITHUB_TOKEN }}
         run: ./plugin/gradlew -p ./plugin publishPlugins --no-daemon
       - name: Create new Github release
         env:
@@ -40,8 +40,10 @@ jobs:
           GRADLE_PUBLISH_SECRET: ${{ secrets.GRADLE_PUBLISH_SECRET }}
           GITHUB_KEY: ${{ secrets.GITHUB_TOKEN }}
         run: ./plugin/gradlew -p ./plugin githubRelease --no-daemon
+
       - name: Update VERSION_LATEST_RELEASE to new published version
         run: cp plugin/VERSION_CURRENT.txt plugin/VERSION_LATEST_RELEASE.txt
+
       - name: Update VERSION_LATEST_RELEASE
         uses: stefanzweifel/git-auto-commit-action@b863ae1933cb653a53c021fe36dbb774e1fb9403 # v5.2.0
         with:
