--- a/.github/workflows/build-and-check.yml
+++ b/.github/workflows/build-and-check.yml
@@ -65,13 +65,13 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-wrapper-${{ hashFiles('**/gradlew') }}-
             ${{ runner.os }}-gradle-wrapper-
-      - name: Build plugin
-        run: ./plugin/gradlew -p ./plugin assemble ensureDependenciesAreInlined test --no-daemon
+      - name: Test Plugin
+        run: ./plugin/gradlew -p ./plugin check --no-daemon
       - name: Upload test results
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
         if: failure()
         with:
-          name: test-results-${{ runner.os }}
+          name: test-results-${{ runner.os }}-java-${{ matrix.java_version }}
           path: plugin/build/reports/tests/test/
       - name: Upload Memory Dump
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
@@ -137,3 +137,26 @@ jobs:
         uses: gradle/actions/dependency-submission@v4
         with:
           dependency-graph: generate-and-upload
+
+  check_release:
+    name: Test Release Pipeline
+    runs-on: ubuntu-latest
+    steps:
+      - name: Harden the runner (Audit all outbound calls)
+        uses: step-security/harden-runner@0634a2670c59f64b4a01f0f96f84700a4088b9f0 # v2.12.0
+        with:
+          egress-policy: audit
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      - name: Base Release Environment Setup
+        uses: ./.github/actions/base-release
+      - name: Verify Release Pipeline
+        env:
+          GITHUB_KEY: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          ./plugin/gradlew \
+          -p ./plugin \
+          -DdryRun=true \
+          -x test \
+          devSnapshot \
+          validatePlugins \
+          githubRelease
