--- a/.github/workflows/new-release.yml
+++ b/.github/workflows/new-release.yml
@@ -1,50 +1,52 @@
 name: "New plugin release"
+# This workflow is triggered by a tag push to the repository.
+# This workflow should be triggered by the `trigger-release.yaml` workflow
 on:
   push:
     tags:
       - v[0-9]+.[0-9]+.[0-9]+
+      - v[0-9]+.[0-9]+.[0-9]+-rc.[0-9]+
 
 jobs:
   make-new-release:
     name: "Releasing plugin"
     runs-on: ubuntu-latest
-    permissions:
-      # Give the default GITHUB_TOKEN write permission to commit and push the
-      # changed files to the repository.
-      contents: write
     steps:
       - name: Harden the runner (Audit all outbound calls)
         uses: step-security/harden-runner@0634a2670c59f64b4a01f0f96f84700a4088b9f0 # v2.12.0
         with:
           egress-policy: audit
-
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-        with:
-          ref: ${{ github.head_ref }}
-      - name: set up JDK 1.8
-        uses: actions/setup-java@c5195efecf7bdfc987ee8bae7a71cb8b11521c00 # v4.7.1
-        with:
-          java-version: 8
-          distribution: 'zulu'
-      - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@v4
-      - name: Publish plugin
+      - name: Base Release Environment Setup
+        uses: ./.github/actions/base-release
+      - name: Publish Plugin Candidate
+        if: contains(github.ref, '-rc.')
         env:
           GRADLE_PUBLISH_KEY: ${{ secrets.GRADLE_PUBLISH_KEY }}
           GRADLE_PUBLISH_SECRET: ${{ secrets.GRADLE_PUBLISH_SECRET }}
           GITHUB_KEY: ${{ secrets.GITHUB_TOKEN }}
-        run: ./plugin/gradlew -p ./plugin publishPlugins --no-daemon
-      - name: Create new Github release
+        run: |
+          ./plugin/gradlew \
+          -p ./plugin \
+          -Preleasing \
+          -Prelease.disableGitChecks=true \
+          -Prelease.useLastTag=true \
+          candidate \
+          publishPlugins \
+          githubRelease
+
+      - name: Publish Plugin Release
+        if: (!contains(github.ref, '-rc.'))
         env:
           GRADLE_PUBLISH_KEY: ${{ secrets.GRADLE_PUBLISH_KEY }}
           GRADLE_PUBLISH_SECRET: ${{ secrets.GRADLE_PUBLISH_SECRET }}
           GITHUB_KEY: ${{ secrets.GITHUB_TOKEN }}
-        run: ./plugin/gradlew -p ./plugin githubRelease --no-daemon
-
-      - name: Update VERSION_LATEST_RELEASE to new published version
-        run: cp plugin/VERSION_CURRENT.txt plugin/VERSION_LATEST_RELEASE.txt
-
-      - name: Update VERSION_LATEST_RELEASE
-        uses: stefanzweifel/git-auto-commit-action@b863ae1933cb653a53c021fe36dbb774e1fb9403 # v5.2.0
-        with:
-          commit_message: Update VERSION_LATEST_RELEASE to ${{ github.event.inputs.new_version }}
+        run: |
+          ./plugin/gradlew \
+          -p ./plugin \
+          -Preleasing \
+          -Prelease.disableGitChecks=true \
+          -Prelease.useLastTag=true \
+          final \
+          publishPlugins \
+          githubRelease
