--- a/.github/workflows/trigger-release.yaml
+++ b/.github/workflows/trigger-release.yaml
@@ -1,9 +1,9 @@
-name: "Perform Release"
+name: "Trigger Release"
 on:
   workflow_dispatch:
     inputs:
        new_version:
-         description: "Release Version (no 'v')"
+         description: "Release Version (no 'v'). End with `-rc` for release candidate"
          required: true
          type: string
 
@@ -15,24 +15,37 @@ jobs:
         uses: step-security/harden-runner@0634a2670c59f64b4a01f0f96f84700a4088b9f0 # v2.12.0
         with:
           egress-policy: audit
+
       - name: Checkout code
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
+          # Required to trigger follow-on workflow runs
+          # https://github.com/stefanzweifel/git-auto-commit-action#commits-made-by-this-action-do-not-trigger-new-workflow-runs
           token: ${{ secrets.PAT }}
+
       - name: Update Changelog
         uses: thomaseizinger/keep-a-changelog-new-release@f62c3c390716df5af712ba5d94f4f4a8efc1306d # 3.1.0
         with:
           tag: v${{ github.event.inputs.new_version }}
           version: ${{ github.event.inputs.new_version }}
+
       - name: Update README
         run: |
           new_version=$(echo "${{ github.event.inputs.new_version }}")
           stripped_version=$($new_version | sed -e 's/\.//g')
           formatted_date=$(date "+%Y%m%d")
           sed -i 's|\(Latest plugin version: \[\).*\(\](/CHANGELOG.md#\).*---.*)|\1'"$new_version"'\2'"$stripped_version"'---'"$formatted_date"')|' README.md
-      - name: Update VERSION_CURRENT
-        run: printf "${{ github.event.inputs.new_version }}\n" > plugin/VERSION_CURRENT.txt
+
+      - name: Upload Changed Files as Artifacts
+        uses: actions/upload-artifact@4
+        with:
+          name: changed-files
+          path: |
+            CHANGELOG.md
+            README.md
+
       - name: Perform Release Tagging and Push
+        if: (!contains(github.ref, '-rc.'))
         # This will trigger the new release job that will take the tag and push the release to the plugin portal
         uses: stefanzweifel/git-auto-commit-action@b863ae1933cb653a53c021fe36dbb774e1fb9403 # v5.2.0
         with:
