--- a/plugin/gradle.properties
+++ b/plugin/gradle.properties
@@ -5,3 +5,5 @@ org.gradle.vfs.watch=true
 #org.gradle.unsafe.configuration-cache=true
 
 org.gradle.workers.max = 4
+# Used by the nebula release plugin to locate the root git directory
+git.root=..
