Fix docs in Trigger Release workflow
Signed-off-by: Jonathan Leitschuh <Jonathan.Leitschuh@gmail.com>

--- a/.github/workflows/trigger-release.yaml
+++ b/.github/workflows/trigger-release.yaml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch:
     inputs:
        new_version:
-         description: "Release Version (no 'v'). End with `-rc` for release candidate"
+         description: "Release Version (no 'v'). End with `-rc.#` for release candidate"
          required: true
          type: string
 
