--- a/plugin/.editorconfig
+++ b/plugin/.editorconfig
@@ -13,6 +13,9 @@ ij_kotlin_name_count_to_use_star_import_for_members = 999
 ij_kotlin_allow_trailing_comma = false
 ij_kotlin_allow_trailing_comma_on_call_site = false
 ktlint_code_style=intellij_idea
+ktlint_standard_function-expression-body = disabled
+ktlint_standard_function-signature = disabled
+ktlint_standard_class-signature = disabled
 
 [*.{yml,yaml}]
 indent_size = 2
