--- a/.github/workflows/trigger-release.yaml
+++ b/.github/workflows/trigger-release.yaml
@@ -2,10 +2,10 @@ name: "Trigger Release"
 on:
   workflow_dispatch:
     inputs:
-       new_version:
-         description: "Release Version (no 'v'). End with `-rc.#` for release candidate"
-         required: true
-         type: string
+      new_version:
+        description: "Release Version (no 'v'). End with `-rc.#` for release candidate"
+        required: true
+        type: string
 
 jobs:
   perform-release:
@@ -44,10 +44,16 @@ jobs:
             CHANGELOG.md
             README.md
 
-      - name: Perform Release Tagging and Push
-        if: (contains(github.ref, '-rc.'))
+      - name: Cleanup Changed Files for RC
+        if: contains(github.event.inputs.new_version, '-rc.')
+        run: |
+          # Reset the README.md and CHANGELOG.md files to their original state
+          git checkout HEAD -- README.md CHANGELOG.md
+
+      - name: Perform Tagging and Push
         # This will trigger the new release job that will take the tag and push the release to the plugin portal
         uses: stefanzweifel/git-auto-commit-action@b863ae1933cb653a53c021fe36dbb774e1fb9403 # v5.2.0
         with:
           commit_message: Release version ${{ github.event.inputs.new_version }}
           tagging_message: 'v${{ github.event.inputs.new_version }}'
+          skip_dirty_check: ${{contains(github.event.inputs.new_version, '-rc.')}}
