--- a/.github/workflows/trigger-release.yaml
+++ b/.github/workflows/trigger-release.yaml
@@ -54,6 +54,7 @@ jobs:
         # This will trigger the new release job that will take the tag and push the release to the plugin portal
         uses: stefanzweifel/git-auto-commit-action@b863ae1933cb653a53c021fe36dbb774e1fb9403 # v5.2.0
         with:
+          commit_options: --allow-empty
           commit_message: Release version ${{ github.event.inputs.new_version }}
           tagging_message: 'v${{ github.event.inputs.new_version }}'
           skip_dirty_check: ${{contains(github.event.inputs.new_version, '-rc.')}}
