--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -81,7 +81,7 @@ jobs:
         # Now that an explicit java version has been set, use it
         if: matrix.language == 'java-kotlin'
         run: |
-          ./gradlew -p plugin --no-daemon --no-build-cache --console=plain --no-configuration-cache -x test -x check
+          ./plugin/gradlew -p ./plugin classes --no-daemon --no-build-cache --console=plain --no-configuration-cache -x test -x check
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@76621b61decf072c1cee8dd1ce2d2a82d33c17ed # v3.29.8
