update build to work with gradle 9.1 and Java 25
create separate test tasks for each java version
attempt to recreate project isolation failure
create separate Gradle test task for each JVM version. these are still individually invoked by github actions matrix
fix GMM and POM to properly reflect that the published Jar is a shadow jar

--- a/samples/kotlin-gradle/build.gradle
+++ b/samples/kotlin-gradle/build.gradle
@@ -4,7 +4,9 @@ plugins {
     id 'org.jlleitschuh.gradle.ktlint'
 }
 
-mainClassName = "org.jlleitschuh.gradle.ktlint.sample.gradle.MainKt"
+application {
+    mainClass.set("org.jlleitschuh.gradle.ktlint.sample.gradle.MainKt")
+}
 
 ktlint {
     debug = true
